switch to legacy afp timemachine protocol

--- a/applications/timemachine/timemachine-secret.yaml
+++ b/applications/timemachine/timemachine-secret.yaml
@@ -7,5 +7,5 @@ metadata:
   namespace: backups
 type: Opaque
 data:
-  TM_USER: YWRtaW4=
-  TM_PW: cGFzc3dvcmQ=
+  AFP_LOGIN: YWRtaW4=
+  AFP_PASSWORD: cGFzc3dvcmQ=
