--- a/applications/timemachine/timemachine-deployment.yaml
+++ b/applications/timemachine/timemachine-deployment.yaml
@@ -6,8 +6,10 @@ metadata:
   labels:
     app: timemachine
 data:
-  TM_ID: "1000"
-  TM_SIZE: "512000"
+  AFP_NAME: "backups"
+  AFP_SIZE_LIMIT: "512000"
+  PUID: "1000"
+  PGID: "1000"
 # ---
 # apiVersion: v1
 # kind: PersistentVolumeClaim
@@ -43,41 +45,33 @@ spec:
       labels:
         app: timemachine
     spec:
-      hostNetwork: true
-      securityContext: {}
-        # runAsUser: 1000
-        # runAsGroup: 1000
-        # fsGroup: 1000
+      # hostNetwork: true
+      # securityContext: {}
+      #   runAsUser: 1000
+      #   runAsGroup: 1000
+      #   fsGroup: 1000
       containers:
       - name: timemachine
-        image: willtho/samba-timemachine
+        image: odarriba/timemachine
         env:
-          - name: TM_USER
+          - name: AFP_LOGIN
             valueFrom:
               secretKeyRef:
                 name: timemachine-user-creds
-                key: TM_USER
-          - name: TM_PW
+                key: AFP_LOGIN
+          - name: AFP_PASSWORD
             valueFrom:
               secretKeyRef:
                 name: timemachine-user-creds
-                key: TM_PW
+                key: AFP_PASSWORD
         envFrom:
         - configMapRef:
             name: timemachine-config
         ports:
-        # https://wiki.archlinux.org/index.php/Avahi
-        - containerPort: 5353
-          name: avahi
-        # https://www.samba.org/~tpot/articles/firewall.html
-        - containerPort: 137
-          name: udp-137
-        - containerPort: 138
-          name: udp-138
-        - containerPort: 139
-          name: tcp-139
-        - containerPort: 445
-          name: tcp-445
+        - containerPort: 548
+          name: afp
+        - containerPort: 636
+          name: ldaps
         volumeMounts:
         - name: timemachine-data
           mountPath: /timemachine
@@ -85,5 +79,5 @@ spec:
       - name: timemachine-data
         # https://kubernetes.io/docs/concepts/storage/volumes/#hostpath
         hostPath:
-          path: /mnt/local/media/timemachine
+          path: /mnt/unionfs/media/timemachine
           type: DirectoryOrCreate
