--- a/applications/pihole/pihole-svc.yaml
+++ b/applications/pihole/pihole-svc.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     metallb.universe.tf/allow-shared-ip: pihole-svc
   labels:
-    app: enternal-dns
+    app: pihole
 spec:
   type: LoadBalancer
   loadBalancerIP: 192.168.0.122
